fix(assets/ui.css): align first paragraph to warning marker

--- a/assets/ui.css
+++ b/assets/ui.css
@@ -216,6 +216,11 @@
   display: inline-block;
 }
 
+.respec-error-list li > p:first-child,
+.respec-warning-list li > p:first-child {
+  display: inline;
+}
+
 #respec-overlay {
   display: block;
   position: fixed;
